--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
     <div class="portfolio" id="portfolio">
       <div class="container">
         <div class="main-heading">
-          <h2>portfolio</h2>
+          <h2>Portfolio</h2>
           <p>
             Curabitur arcu erat, accumsan id imperdiet et, porttitor at sem.
             Mauris blandit aliquet elit, eget tincidunt.
